# cs267_proj

./: .gitignore  README.md  create_points.py  points.txt
clustering/example/: CMakeCache.txt  CMakeLists.txt  FindEigen3.cmake  Makefile  cmake_install.cmake  core  create_points.py  example.cpp  example_old.cpp  large_points.txt  mpi.cpp  normal_points.txt  points.txt  small_points.txt  test_points.txt  tiny_points.txt
clustering/lib/: .common.c.swp  CMakeLists.txt  Kmeans.cpp  Makefile  common.cpp  common.h  jacobi.cpp  jacobi.h  jacobi_parallel.cpp  jacobi_parallel.h  jacobi_serial.cpp  jacobi_serial.h  main.cpp
clustering/parallel/: .example.cpp.swo  CMakeLists.txt  example.cpp  example2.cpp  job-cori-mpi32  parallel.cpp  points.txt  points_16.txt  points_2000.txt  points_large.txt  points_medium.txt
clustering/serial/: CMakeLists.txt  serial.cpp
jacobi-eigenvalues/: jacobi.cpp  jacobi.h  main.cpp
